--- a/messaging_app/Dockerfile
+++ b/messaging_app/Dockerfile
@@ -1,10 +1,15 @@
 FROM python:3.10
 
-WORKDIR /usr/src/app
+RUN apt-get update && apt-get install -y default-libmysqlclient-dev gcc
 
-COPY requirements.txt ./
-RUN pip install -r requirements.txt
+RUN mkdir /app
 
-COPY . .
+WORKDIR /app
+
+COPY requirements.txt  /app/
+RUN pip install --no-cache-dir -r requirements.txt
+
+COPY . /app/
+
 EXPOSE 8000
 CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
