--- a/messaging_app/docker-compose.yml
+++ b/messaging_app/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: ${DATABASE_ROOT_PASSWORD}
-      MYSQL_DATABASE: ${DATABASE_NAME}
+      MYSQL_DATABASE: ${MYSQL_DB}
       MYSQL_USER: ${DATABASE_USERNAME}
       MYSQL_PASSWORD: ${DATABASE_PASSWORD}
     healthcheck:
@@ -25,7 +25,7 @@ services:
     container_name: messaging-app-image
     ports:
       - "8000:8000"
-    command: python manage.py runserver 0.0.0.0:8000
+    command: python3 manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/app
     depends_on:
@@ -34,7 +34,7 @@ services:
     environment:
       SECRET_KEY: ${DJANGO_SECRET_KEY}
       DATABASE_ENGINE: ${DATABASE_ENGINE}
-      DATABASE_NAME: ${DATABASE_NAME}
+      DATABASE_NAME: ${MYSQL_DB}
       DATABASE_USERNAME: ${DATABASE_USERNAME}
       DATABASE_PASSWORD: ${DATABASE_PASSWORD}
       DATABASE_HOST: ${DATABASE_HOST}
