Implement a Blue-Green Deployment Strategy

--- a/messaging_app/kubeservice.yaml
+++ b/messaging_app/kubeservice.yaml
@@ -5,6 +5,7 @@ metadata:
 spec:
   selector:
     app: messaging
+    version: blue # start with blue deployment
   ports:
     - protocol: TCP
       port: 8000
