--- a/messaging_app/messaging_app/Jenkinsfile
+++ b/messaging_app/messaging_app/Jenkinsfile
@@ -1,13 +1,19 @@
 pipeline {
     agent any
     stages {
+        stage('Checkout') {
+            steps {
+                git branch: 'main',
+                    credentialsId: 'github-credentials',
+                    url: 'https://github.com/roqiaahmed/alx-backend-python.git'
+            }
+        }
         stage('Build') {
             steps {
                 echo 'Building..'
                 sh '''
-                git clone https://github.com/roqiaahmed/alx-backend-python.git
-                cd alx-backend-python/messaging_app
-                pip install -r requirements.txt
+                cd alx-backend-python
+                pip3 install -r messaging_app/requirements.txt
                 '''
             }
         }
