--- a/messaging_app/messaging_app/Jenkinsfile
+++ b/messaging_app/messaging_app/Jenkinsfile
@@ -12,8 +12,8 @@ pipeline {
             steps {
                 echo 'Building..'
                 sh '''
-                cd alx-backend-python
-                pip3 install -r messaging_app/requirements.txt
+                cd messaging_app
+                pip3 install -r requirements.txt
                 '''
             }
         }
@@ -21,7 +21,7 @@ pipeline {
             steps {
                 echo 'Testing..'
                 sh '''
-                cd alx-backend-python/messaging_app
+                cd messaging_app
                 pytest
                 '''
             }
