--- a/messaging_app/messaging_app/Jenkinsfile
+++ b/messaging_app/messaging_app/Jenkinsfile
@@ -27,8 +27,7 @@ pipeline {
             steps {
                 echo 'Building..'
                 sh '''
-                cd messaging_app
-                pip3 install -r requirements.txt
+                pip3 install -r messaging_app/requirements.txt
                 '''
             }
         }
